# ayuda

./: Cargo.toml  README.md  build.rs
core_cpp/: evaluator.cpp  hacker.cpp
core_cpp/include/: evaluator.hpp  hacker.hpp
scripts/: install.sh
src/: ask.rs  clean.rs  db.rs  goto.rs  history.rs  main.rs  personality.rs  sass.rs  teleport.rs
