[package]
name = "ayuda"
version = "0.2.4"
edition = "2021"

[dependencies]
cxx = "1.0"
clap = { version = "4.0", features = ["derive"] }
rusqlite = "0.29"
home = "0.5.12"
walkdir = "2.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
tokio = { version = "1.52.3", features = ["full"] }

[build-dependencies]
cxx-build = "1.0"
